--- a/index.css
+++ b/index.css
@@ -989,7 +989,7 @@ canvas.pong {
 	border: 2px solid var(--textColor);
 }
 
-.wrapper-options-forms form .flag-vlaaderen {
+.wrapper-options-forms form .flag-Netherlands {
 	height: 1rem;
 	width: 1.4rem;
 }
