--- a/index.css
+++ b/index.css
@@ -726,7 +726,7 @@ label:has(> [type=radio]:focus-visible) {
 .coin.active {
 	margin-top: 5px;
 	margin-left: 100%;
-	transition: margin 3s ease;
+	transition: margin 2s ease;
 }
 
 .coin.fall {
@@ -1319,6 +1319,22 @@ canvas.pong {
 	width: 100%;
 	font-size: 10vw;
 	z-index: 1;
+}
+
+.tab-tabs .tab-chat-lock {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 94%;
+	width: 94%;
+}
+
+.tab-tabs .tab-chat-lock p {
+	width: 100%;
+	padding: 0 10%;
+	text-align: center;
+	text-wrap: pretty;
 }
 
 .tab-chat .chat-message {
