--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -18,6 +18,21 @@ body {
 	font: 1rem "Inter", sans-serif;
 }
 
+[type=radio] {
+	position: absolute;
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+label:not([type="radio"]) {
+	outline: none;
+}
+
+label[type="radio"]:focus-visible {
+	outline: 1px black auto;
+}
+
 button:focus:not(:focus-visible) {
 	outline: none;
 }
@@ -240,7 +255,7 @@ textarea { font-size: 0.9rem; }
 	margin-top: -3.350rem;
 }
 
-.login-page form button.signup, .login-page form button.cancel-signup  {
+.login-page form button.signup, .login-page form button.cancel-signup {
 	background-color: var(--mainColor);
 	color: var(--textColor);
 	border: 1px solid var(--textColor);
@@ -465,17 +480,6 @@ h2 {
 .game-selector span:active::before {
 	transform: translate3d(0, 0, -1em);
 	box-shadow: 0 0 0 2px rgb(88, 88, 88), 0 0.25em 0 0 rgb(88, 88, 88);
-}
-
-[type=radio] {
-	position: absolute;
-	opacity: 0;
-	width: 0;
-	height: 0;
-}
-
-label:has(> [type=radio]:focus-visible) {
-	outline: 1px black auto;
 }
 
 .game-selector [type=radio] + span {
@@ -848,9 +852,14 @@ label:has(> [type=radio]:focus-visible) {
 	height: 81%;
 	overflow: hidden;
 	position: relative;
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
-.wrapper-screen-all:has(.wrapper-canvas canvas:focus) {
+.wrapper-screen-all > .wrapper-canvas canvas:not(:focus-visible) {
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(131, 126, 126);
+}
+
+.wrapper-screen-all > .wrapper-canvas canvas:focus-visible {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
@@ -990,12 +999,15 @@ canvas.pong {
 	align-items: center;
 	gap: 0.4rem;
 	padding: 0.2rem 0.4rem;
-	border: 2px solid var(--mainColor);
 	border-radius: 23px;
 	cursor: pointer;
 }
 
-.wrapper-options-forms .lang-label:has([type=radio]:checked) {
+.wrapper-options-forms .lang-label > [type=radio]:not(:checked) {
+	border: 2px solid var(--mainColor);
+}
+
+.wrapper-options-forms .lang-label > [type=radio]:checked {
 	border: 2px solid var(--textColor);
 }
 
@@ -1634,11 +1646,6 @@ canvas.pong {
 	left: 0;
 	font-size: 0.8rem;
 	animation: none;
-}
-
-.wrapper-right-section:has(> .wrapper-history:not(.hidden)) .chat-input,
-.wrapper-right-section:has(> .wrapper-history:not(.hidden)) .friend-input {
-	display: none;
 }
 
 /*//////////////////////*/
