--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -854,8 +854,12 @@ h2 {
 	position: relative;
 }
 
-.wrapper-screen-all > .wrapper-canvas canvas:not(:focus-visible) {
+.wrapper-screen-all {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(131, 126, 126);
+}
+
+.wrapper-screen-all > .wrapper-canvas canvas:not(:focus-visible) {
+	box-shadow: none;
 }
 
 .wrapper-screen-all > .wrapper-canvas canvas:focus-visible {
