--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -852,13 +852,11 @@ h2 {
 	height: 81%;
 	overflow: hidden;
 	position: relative;
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
-.wrapper-screen-all:not(> .wrapper-canvas canvas:focus-visible) {
+.wrapper-screen-all:not(> .wrapper-canvas > canvas:focus-visible) {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(131, 126, 126);
-}
-.wrapper-screen-all > .wrapper-canvas canvas:focus-visible {
-	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
 .wrapper-canvas {
@@ -997,16 +995,13 @@ canvas.pong {
 	align-items: center;
 	gap: 0.4rem;
 	padding: 0.2rem 0.4rem;
+	border: 2px solid var(--textColor);
 	border-radius: 23px;
 	cursor: pointer;
 }
 
-.wrapper-options-forms .lang-label > [type=radio]:not(:checked) {
+.wrapper-options-forms .lang-label:not(> [type=radio]:checked) {
 	border: 2px solid var(--mainColor);
-}
-
-.wrapper-options-forms .lang-label > [type=radio]:checked {
-	border: 2px solid var(--textColor);
 }
 
 .wrapper-options-forms .options-wrapper-connection {
