--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -25,11 +25,7 @@ body {
 	height: 0;
 }
 
-label:not(> [type="radio"]) {
-	outline: none;
-}
-
-label[type="radio"]:focus-visible {
+label:has(> [type=radio]:focus-visible) {
 	outline: 1px black auto;
 }
 
@@ -855,8 +851,8 @@ h2 {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
-.wrapper-screen-all:not(> .wrapper-canvas > canvas:focus-visible) {
-	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(131, 126, 126);
+.wrapper-screen-all:has(.wrapper-canvas canvas:focus) {
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
 .wrapper-canvas {
@@ -995,13 +991,13 @@ canvas.pong {
 	align-items: center;
 	gap: 0.4rem;
 	padding: 0.2rem 0.4rem;
-	border: 2px solid var(--textColor);
+	border: 2px solid var(--mainColor);
 	border-radius: 23px;
 	cursor: pointer;
 }
 
-.wrapper-options-forms .lang-label:not(> [type=radio]:checked) {
-	border: 2px solid var(--mainColor);
+.wrapper-options-forms .lang-label:has([type=radio]:checked) {
+	border: 2px solid var(--textColor);
 }
 
 .wrapper-options-forms .options-wrapper-connection {
