--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -965,6 +965,7 @@ canvas.pong {
 	flex-direction: column;
 	width: 50%;
 	padding-left: 1.4rem;
+	position: relative;
 }
 
 .wrapper-options-forms .options-form .options-div label span {
@@ -1019,6 +1020,16 @@ canvas.pong {
 .wrapper-options-forms .options-wrapper-password span.translate-txt {
 	margin-left: 1.4rem;
 	margin-bottom: 0.2rem;
+}
+
+.options-wrapper-password .show-password {
+	position: absolute;
+    right: -2.5rem;
+    height: 100%;
+    width: 10%;
+    margin-bottom: 0;
+    padding: 0;
+    border-radius: 0;
 }
 
 .wrapper-options-forms .options-wrapper-2fa [type=radio] {
