--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -1632,6 +1632,11 @@ canvas.pong {
 	width: 100%;
 	overflow: hidden;
 	position: relative;
+	transition: box-shadow 2s ease;
+}
+
+.wrapper-inputs.in-error {
+	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(250, 0, 0);
 }
 
 .wrapper-inputs div {
