--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -1174,6 +1174,7 @@ canvas.pong {
 
 .wrapper-bottom-section {
 	display: flex;
+	position: relative;
 	height: 15%;
 }
 
@@ -1200,9 +1201,9 @@ canvas.pong {
 	width: 100%;
 }
 
-.wrapper-player-controls .playername {
+.playername {
 	position: absolute;
-	bottom: 1%;
+	top: 0.5rem;
 	margin: 0;
 	padding: 0;
 	font-weight: 700;
