--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -858,6 +858,10 @@ h2 {
 	position: relative;
 }
 
+.wrapper-screen-all.full {
+	height: 100%;
+}
+
 .wrapper-screen-all:has(.wrapper-canvas canvas:focus) {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
