--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -25,10 +25,6 @@ body {
 	height: 0;
 }
 
-label:has(> [type=radio]:focus-visible) {
-	outline: 1px black auto;
-}
-
 button:focus:not(:focus-visible) {
 	outline: none;
 }
@@ -862,7 +858,7 @@ h2 {
 	height: 100%;
 }
 
-.wrapper-screen-all:has(.wrapper-canvas canvas:focus) {
+.wrapper-screen-all.active {
 	box-shadow: 0 0.188rem 0.688rem 0.188rem rgb(210, 210, 210);
 }
 
@@ -1008,7 +1004,7 @@ canvas.pong {
 	cursor: pointer;
 }
 
-.wrapper-options-forms .lang-label:has([type=radio]:checked) {
+.wrapper-options-forms .lang-label.active {
 	border: 2px solid var(--textColor);
 }
 
