--- a/services/Webserver/static/css/index.css
+++ b/services/Webserver/static/css/index.css
@@ -893,13 +893,13 @@ canvas.pong {
 
 .canvas-user-1 {
 	position: absolute;
-	top: 1%;
+	top: 0%;
 	left: 1%;
 }
 
 .canvas-user-2 {
 	position: absolute;
-	top: 1%;
+	top: 0%;
 	right: 1%;
 }
 
@@ -1024,12 +1024,12 @@ canvas.pong {
 
 .options-wrapper-password .show-password {
 	position: absolute;
-    right: -2.5rem;
-    height: 100%;
-    width: 10%;
-    margin-bottom: 0;
-    padding: 0;
-    border-radius: 0;
+	right: -2.5rem;
+	height: 100%;
+	width: 10%;
+	margin-bottom: 0;
+	padding: 0;
+	border-radius: 0;
 }
 
 .wrapper-options-forms .options-wrapper-2fa [type=radio] {
@@ -1926,6 +1926,11 @@ canvas.pong {
 	}
 	.tab-chat .chat-options button span {
 		display: none;
+	}
+	.tab-chat .button-challenge {
+		width: 100%;
+		background: var(--main);
+		border: none;
 	}
 	.tab-chat td:hover .chat-options, .tab-chat td:focus .chat-options, .tab-chat td:focus-within .chat-options {
 		display: block;
